# TrajectoryFollowing

./: .gitignore  README.md
agent/: dqn.py  path_generator.py  path_generator_v1.py  replay_buffer3.py  test_v2.py  train.py  train_simple.py  train_v2.py  train_velodyne_td3.py  velodyne_env.py
agent/assets/: multi_robot_scenario.launch
agent/models/: agent.py  network.py  replay_buffer2.py  replay_buffer3.py
agent/utils/: path_generator.py  visulaize_cnn.py
catkin_ws/src/gazebo_worlds/: CMakeLists.txt  package.xml
catkin_ws/src/gazebo_worlds/launch/: gazebo_only.launch
catkin_ws/src/gazebo_worlds/src/: floor_visual_plugin.cc  floor_world_plugin.cc
catkin_ws/src/multi_robot_scenario/launch/: Indoor1.world  empty_world.launch  pioneer3dx.rviz
catkin_ws/src/robot/: CMakeLists.txt  package.xml
catkin_ws/src/robot/config/: control.yaml
catkin_ws/src/robot/urdf/: includes.xacro  jetbot.urdf.xacro
catkin_ws/src/robot_scenario/: CMakeLists.txt  package.xml
catkin_ws/src/robot_scenario/launch/: Indoor1.world  empty_world.launch  gazebo_only.launch  jetbot.gazebo.launch  model.rviz  rviz_only.launch
catkin_ws/src/tracjectory/: CMakeLists.txt  package.xml
catkin_ws/src/trajectory_marker/: CMakeLists.txt  package.xml
catkin_ws/src/trajectory_marker/src/: trajectory_marker_plugin.cpp
catkin_ws/src/twist_keyboard/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py
dl_model/: jetbot_env.py  test.py  train.py
dl_model/assets/: robot_scenario.launch  trajectory.txt
dl_model/results/: TD3_velodyne.npy
(+14 files in other folders)
